Add test and google auth
