# src/swaggerDoc/swagger-output.json
@@ -10,8 +10,8 @@
       "url": "https://github.com/Irirwanirira/my-brand-back-end"
     }
   },
-  "host": "localhost:3000",
-  "basePath": "/api",
+  "host": "https://my-brand-rvzj.onrender.com",
+  "basePath": "/brand/api/v1",
   "schemes": [
     "http",
     "https"
@@ -21,7 +21,7 @@
       "type": "apiKey",
       "in": "header",
       "name": "Authorization",
-      "description": "Bearer token"
+      "description": "Enter your bearer token in the format Bearer \"<token>\""
     }
   },
   "consumes": [
@@ -89,6 +89,16 @@
       }
     },
     "/auth/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/google": {
       "get": {
         "description": "",
         "responses": {
@@ -416,72 +426,6 @@
       }
     }
   },
-  "definitions": {
-    "User": {
-      "type": "object",
-      "properties": {
-        "type": {
-          "type": "string",
-          "example": "object"
-        },
-        "required": {
-          "type": "array",
-          "example": [
-            "username",
-            "email",
-            "password"
-          ],
-          "items": {
-            "type": "string"
-          }
-        },
-        "properties": {
-          "type": "object",
-          "properties": {
-            "username": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "example": {
-                  "type": "string",
-                  "example": "johndoe"
-                }
-              }
-            },
-            "email": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "example": {
-                  "type": "string",
-                  "example": "johndoe@gmail.com"
-                }
-              }
-            },
-            "password": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "example": {
-                  "type": "string",
-                  "example": "password"
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  },
   "securitySchemes": {
     "bearerAuth": {
       "type": "http",
@@ -492,9 +436,5 @@
     {
       "Bearer": []
     }
-  ],
-  "externalDocs": {
-    "description": "Find out more about My Brand",
-    "url": ""
-  }
+  ]
 }
